Swagger e seeders
