# src/routes/swagger.json
@@ -438,7 +438,47 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Destino cadastrado com sucesso.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string",
+                  "example": "ID do destino"
+                },
+                "usuario_id": {
+                  "type": "string",
+                  "example": "ID do usuário que cadastrou o destino"
+                },
+                "nome_local": {
+                  "type": "string",
+                  "example": "Nome do local do destino"
+                },
+                "descricao": {
+                  "type": "string",
+                  "example": "Descrição detalhada do destino"
+                },
+                "localidade": {
+                  "type": "string",
+                  "example": "Localidade do destino"
+                },
+                "cep": {
+                  "type": "string",
+                  "example": "CEP do local do destino"
+                },
+                "latitude": {
+                  "type": "string",
+                  "example": "Latitude geográfica obtida através do CEP."
+                },
+                "longitude": {
+                  "type": "string",
+                  "example": "Longitude geográfica obtida através do CEP."
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "400": {
             "description": "Bad Request"
@@ -485,15 +525,31 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "schema",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "Listagem de destinos realizada com sucesso.",
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Destino"
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "array"
+                },
+                "items": {
+                  "$ref": "#/definitions/Destino"
+                }
               },
               "xml": {
                 "name": "main"
